commit tree 524072772ad89d03516391ee20bef03bd1fdeef3

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <h2>For all your incorporated company needs</h2>
 
     <!-- First, create a form tag where our inputs will be nested -->
-
+<form action="">
+<label for="fullname" id="fullname" required>Enter Name</label>
+<input type="text" id="fullname" placeholder="Enter Name" required>
+<label for="email"></label>
+<input type="email" id="email" placeholder="Enter Email" required>
+<label for="phone"></label>
+<input type="tel" id="phone" placeholder="Enter Telephone (optional)" >
+<label for="message"></label>
+<textarea name="message" id="message" cols="30" rows="10" placeholder="Enter Message"></textarea>
+<input type="checkbox">
+<input type="submit">
+</form>
 
       <!-- Add a label for 'fullname'-->
 
